# duck-ttlog

./: .editorconfig  .gitignore  .typos.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAKEFILE_README.md  Makefile  README.md  SECURITY.md  WARP.md  biome.json  deny.toml  notes.md  release-plz.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.sh  protect-branches.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  release.yml  scorecard.yml  typos.yml
.husky/: pre-push
benchmark_reports/: comprehensive_report.txt
docs/: README.md  docs.md  full_history.txt  ttlog-macros.md  ttlog.md  why.md
exampels/: README.md
exampels/tes/: Cargo.toml
exampels/tes/src/: main.rs
exampels/ttlog-complex/: Cargo.toml  README.md  readme.md  test-description.md
exampels/ttlog-complex/src/: main.rs
exampels/ttlog-filereader/src/: main.rs
exampels/ttlog-simple/: Cargo.toml
exampels/ttlog-simple/src/: example_basic_logging.rs  example_custom_service.rs  example_high_volume_logging.rs  example_simple.rs  example_structured_logging.rs  main.rs
examples/: README.md
examples/ttlog-complex/: Cargo.toml  README.md
examples/ttlog-complex/src/: main.rs
examples/ttlog-filereader/: Cargo.toml  README.md
examples/ttlog-filereader/src/: main.rs
examples/ttlog-server/: Cargo.toml  README.md
examples/ttlog-server/src/: main.rs
examples/ttlog-simple/: Cargo.toml  README.md
examples/ttlog-simple/src/: example-destributed.rs  example_basic_logging.rs  example_error_scenarios.rs  example_high_volume_logging.rs  example_multithreaded_logging.rs  example_panic_handling.rs  example_simple.rs  main.rs
plans/: 2.md  3.md  acquire-release.md  bindings-plan.md  gg.md  notes.md  performance-plan.md  replace-ring-buffer.md  report-08-21-2025.md  sys-roadmap.md
ttlog/: Cargo.toml  README.md
ttlog-benches/: Cargo.toml  README.md  REPORTING.md  benchmarks-v0.1.2.md  distributed_bench.rs  distributed_simulator.rs  heavy_stress_test.rs  max-test.rs  max_performance.rs  result.md  run_all_benchmarks.sh  test_performance.rs
ttlog-benches/reports/: latest.md
ttlog-event/: Cargo.toml
ttlog-event/src/: lib.rs
ttlog-macros/: Cargo.toml  README.md
ttlog-macros/src/: lib.rs
ttlog-view/: Cargo.toml  PERFORMANCE_OPTIMIZATIONS.mdx  README.md
ttlog-view/src/: data_loader.rs  main.rs  main1.rs  main2.rs
ttlog-view/src/app/: mod.rs
ttlog-view/src/events_graph_widget/: mod.rs
ttlog-view/src/help/: mod.rs
ttlog-view/src/logs/: mod.rs
ttlog-view/src/logs_chart_widget/: mod.rs  render.rs
ttlog-view/src/logs_graph_widget/: mod.rs
ttlog-view/src/logs_widget/: keydown.rs  mod.rs  render.rs
ttlog-view/src/main_widget/: mod.rs
ttlog-view/src/monotring/: mod.rs
ttlog-view/src/snapshot_read/: mod.rs
ttlog-view/src/snapshot_widget/: mod.rs  render.rs
ttlog-view/src/snapshots/: mod.rs
ttlog-view/src/stats_widget/: mod.rs
ttlog-view/src/system_info_widget/: mod.rs
ttlog-view/src/tabs_widget/: mod.rs
ttlog-view/src/times/: mod.rs
ttlog-view/src/utils/: mod.rs
ttlog-view/src/widget/: mod.rs
ttlog/benches/: distributed_bench.rs  distributed_simulator.rs  heavy_stress_test.rs  max_performance.rs  run_all_benchmarks.sh  statics.md  test_performance.rs
ttlog/src/: lib.rs
ttlog/src/buffer/: mod.rs
ttlog/src/buffer/__test__/: mod.rs
ttlog/src/event/: mod.rs
ttlog/src/event/__test__/: mod.rs
ttlog/src/event_builder/: mod.rs
ttlog/src/event_builder/__test__/: mod.rs
ttlog/src/file_listener/: mod.rs
ttlog/src/kv/: mod.rs
ttlog/src/kv/__test__/: mod.rs
ttlog/src/lf_buffer/: mod.rs
ttlog/src/lf_buffer/__test__/: mod.rs
ttlog/src/listener/: mod.rs
ttlog/src/logger/: mod.rs
ttlog/src/panic_hook/: mod.rs
ttlog/src/panic_hook/__test__/: mod.rs
ttlog/src/signal_hook/: mod.rs
ttlog/src/snapshot/: mod.rs
ttlog/src/snapshot/__test__/: mod.rs
ttlog/src/stdout_listener/: mod.rs
ttlog/src/string_interner/: mod.rs
ttlog/src/string_interner/__test__/: mod.rs
ttlog/src/trace/: mod.rs
ttlog/src/trace/__test__/: mod.rs
ttlog/src/trace_layer/: mod.rs
ttlog/src/trace_layer/__test__/: mod.rs
ttlog/src/utils/: mod.rs
ttlog/tests/: macro_dynamic_kv.rs  macro_tests.rs
