[workspace]
members = [
  "ttlog",
  "ttlog-view",
  "ttlog-macros",
  "ttlog-benches",
  "examples/ttlog-simple",
  "examples/ttlog-filereader",
]
# ttlog-server + ttlog-complex are out of date with the current
# trace/send_event_fast signature; exclude until they are refactored.
exclude = [
  "examples/ttlog-server",
  "examples/ttlog-complex",
]
resolver = "2"

[workspace.package]
version = "0.1.21"
edition = "2021"
authors = ["gentleduck"]
description = "High-performance lock-free tracing and logging system"
license = "MIT"
repository = "https://github.com/gentleeduck/duck-ttlog"
homepage = "https://github.com/gentleeduck/duck-ttlog"
documentation = "https://docs.rs/ttlog"
readme = "README.md"
keywords = ["logging", "tracing", "performance", "async", "lock-free"]
categories = ["development-tools::debugging", "asynchronous", "data-structures"]
rust-version = "1.95"

# Lints policy: existing code has many style-level clippy nits.
# Allow the noisy lints so CI passes while still flagging actual bugs.
# Tightening these is a follow-up cleanup, not a release-blocking change.
[workspace.lints.clippy]
module_inception = "allow"
approx_constant = "allow"
too_many_arguments = "allow"
should_implement_trait = "allow"
new_without_default = "allow"
type_complexity = "allow"
needless_range_loop = "allow"
manual_strip = "allow"
ptr_arg = "allow"
manual_unwrap_or_default = "allow"
needless_borrow = "allow"
redundant_field_names = "allow"
useless_conversion = "allow"
useless_format = "allow"
useless_vec = "allow"
needless_return = "allow"
clone_on_copy = "allow"
redundant_closure = "allow"
redundant_clone = "allow"
manual_map = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
collapsible_match = "allow"
single_match = "allow"
match_like_matches_macro = "allow"
needless_lifetimes = "allow"
needless_pass_by_value = "allow"
or_fun_call = "allow"
unnecessary_wraps = "allow"
let_and_return = "allow"
needless_question_mark = "allow"
field_reassign_with_default = "allow"
let_unit_value = "allow"
mut_from_ref = "allow"
zero_ptr = "allow"
unused_io_amount = "allow"
result_large_err = "allow"
large_enum_variant = "allow"
empty_line_after_doc_comments = "allow"
unnecessary_unwrap = "allow"
manual_clamp = "allow"
manual_range_contains = "allow"
nonminimal_bool = "allow"
overly_complex_bool_expr = "allow"
assertions_on_constants = "allow"
vec_init_then_push = "allow"
format_in_format_args = "allow"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0"
smallvec = { version = "1.15.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
lz4 = "1.28"

# Async and concurrency
tokio = { version = "1.47.1", features = ["full"] }
crossbeam-channel = "0.5"
crossbeam-epoch = "0.9.18"
crossbeam-queue = "0.3.12"

# Tracing ecosystem
tracing = "0.1"
tracing-subscriber = "0.3"

# System utilities
gethostname = "1.1.0"
tempfile = "3.8"

# Development and testing
criterion = "0.7.0"
tabled = "0.20"

# UI and display
colored = "3.0.0"
figlet-rs = "0.1.5"
inquire = "0.9.1"
regex = "1.11.1"
terminal_size = "0.4.3"

# Proc macro dependencies
quote = "1.0.40"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

# Utilities
rand = "0.9.2"

[profile.release]
opt-level = 0           # No optimizations
debug = true            # Include debug symbols
debug-assertions = true # Runtime checks enabled
lto = false            # No Link Time Optimization
codegen-units = 256    # Parallel compilation (faster builds)
panic = "unwind"       # Can unwind stack traces
rpath = false          # Don't embed library paths
