[package]
name = "ttlog-event"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
serde = { workspace = true }
serde_cbor = { workspace = true }
smallvec = { workspace = true }
ttlog = { path = "../ttlog" }
