[package]
name = "ttlog-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TTLog event macros and utilities"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
# Proc macro dependencies
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
ryu = "1.0.20"

