[package]
name = "ttlog-view"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TTLog viewer and analysis tool"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_cbor = { workspace = true }
smallvec = { workspace = true }
chrono = { workspace = true }
lz4 = { workspace = true }

# UI and display
colored = { workspace = true }
figlet-rs = { workspace = true }
inquire = { workspace = true }
regex = { workspace = true }
terminal_size = { workspace = true }

# Tracing ecosystem
tracing = { workspace = true }

# Internal dependencies
ttlog = { path = "../ttlog" }

# Development and testing
criterion = { workspace = true }
serde_json = { workspace = true }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = { version = "0.28", features = ["crossterm"] }

