[package]
name = "ttlog"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
chrono = { workspace = true }
lz4 = { workspace = true }
gethostname = { workspace = true }

# Tracing ecosystem
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async and concurrency
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }

[dev-dependencies]
# Async and concurrency
crossbeam-epoch = { workspace = true }
# System utilities
tempfile = { workspace = true }
criterion = { workspace = true }
tabled = { workspace = true }


