[package]
name = "ttlog"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
chrono = { workspace = true }
lz4 = { workspace = true }
gethostname = { workspace = true }
crossbeam-channel.workspace = true
crossbeam-queue = { workspace = true }
ttlog-macros = { path = "../ttlog-macros" }
signal-hook = "0.3.18"
ryu = "1.0.20"
itoa = "1.0.15"

[dev-dependencies]
# System utilities
tempfile = { workspace = true }
tabled = { workspace = true }


