[package]
name = "ttlog-complex"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Complex TTLog usage examples with async and distributed scenarios"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Async and concurrency
tokio = { workspace = true }
crossbeam-channel = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
lz4 = { workspace = true }

# Tracing ecosystem
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
rand = { workspace = true }

# Internal dependencies
ttlog = { path = "../../ttlog" }
