[package]
name = "ttlog-filereader"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TTLog file reader example"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true }
lz4 = { workspace = true }
serde_cbor = { workspace = true }

# Tracing ecosystem
tracing = { workspace = true }

# Internal dependencies
ttlog = { path = "../../ttlog" }
