[package]
name = "ttlog-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TTLog server example"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Tracing ecosystem
tracing = { workspace = true }

# Internal dependencies
ttlog = { path = "../../ttlog" }
