[package]
name = "ttlog-simple"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Simple TTLog usage examples"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde_json.workspace = true
# Tracing ecosystem
tracing = { workspace = true }

# Internal dependencies
ttlog = { path = "../../ttlog" }
uuid = { version = "1.18.0" , features = ["v4"] }
